# ego-rust-template

./: README.md  ego-config.json  ego-projects.json  package.json  post_run.js  post_run.json
canisters/: Cargo.toml
canisters/dapp/ego_example/: Cargo.toml
canisters/dapp/ego_example/actor/: Cargo.toml
canisters/dapp/ego_example/actor/src/: actor.rs  main.rs  mod.rs
canisters/dapp/ego_example/mod/: Cargo.toml
canisters/dapp/ego_example/mod/src/: memory.rs  mod.rs  state.rs  types.rs
canisters/dapp/ego_example/src/: actor.rs  memory.rs  mod.rs
clients/scripts/: console.test.ts
clients/tests/: example.test.ts
clients/tests/scripts/: example.test.ts
configs/: local.json  mac.json
