[package]
name = "ego_example"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/actor.rs"
crate-type = ["cdylib"]

[[bin]]
name = "ego-example"
path = "src/main.rs"

[dependencies]
candid = "0.8.4"
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
ego_example_mod = {path = "../mod"}
astrox_macros = "0.2.4"
ego_lib = "0.3.4"
hex ="0.4.3"
