[package]
name = "ego_example_mod"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/mod.rs"

[dependencies]
async-trait = "0.1.57"
candid = "0.8.4"
ciborium = { git = "https://github.com/enarx/ciborium", rev = "e719537c99b564c3674a56defe53713c702c6f46" }
ic-cdk = "0.9.0"
ic-cdk-macros = "0.6.8"
ic-certified-map = "0.3.0"
ic-stable-structures = "0.5.4"
serde_bytes = "0.11"
serde = "1"
itertools= "0.11.0"
ego_types = "0.2.2"
ego_lib = "0.4.6"
ego_macros = "0.2.4"
hex = "0.4.3"
